--- a/unreal/project/project.uproject
+++ b/unreal/project/project.uproject
@@ -14,6 +14,18 @@
 		{
 			"Name": "testEditorToolbarButton",
 			"Enabled": false
+		},
+		{
+			"Name": "testEditorStandaloneWindow",
+			"Enabled": false
+		},
+		{
+			"Name": "testContentOnly",
+			"Enabled": false
+		},
+		{
+			"Name": "testEditorMode",
+			"Enabled": false
 		}
 	]
 }
